--- a/usecase2-restrictable-updated.ipynb
+++ b/usecase2-restrictable-updated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "dfb122fc",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "dde3db2d",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c887a450",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "072e475e",
    "metadata": {},
    "outputs": [],
@@ -403,25 +403,25 @@
     "        func=get_user_by_email,\n",
     "        description='useful for getting data of the current user, data include fullName, birthday, bankAccountNumber, etc. No input necessary.'\n",
     "    ),\n",
-    "    \n",
+    "\n",
+    "        #     Tool(\n",
+    "    #         name='Output to user',\n",
+    "    #         func=output_to_user,\n",
+    "    #         description='useful for sending messages to the user as they cannot see your thought, actions, etc. This tool takes in your message and sends it to the user.'\n",
+    "    #     ),\n",
+    "\n",
     "    #     Tool(\n",
-    "#         name='Output to user',\n",
-    "#         func=output_to_user,\n",
-    "#         description='useful for sending messages to the user as they cannot see your thought, actions, etc. This tool takes in your message and sends it to the user.'\n",
-    "#     ),\n",
-    "    \n",
-    "#     Tool(\n",
-    "#         name='End conversation',\n",
-    "#         func=end_convo,\n",
-    "#         description='useful for ending the conversation if the user cancels the task or you cannot complete the task.'\n",
-    "#     ),\n",
-    "    \n",
-    "#     Tool(\n",
-    "#         name='Do nothing',\n",
-    "#         func=nothing,\n",
-    "#         description='useful for filling in Action: after Thought: if the task can\\'t be done or the task is cancelled.'\n",
-    "#     ),\n",
-    "]\n",
+    "    #         name='End conversation',\n",
+    "    #         func=end_convo,\n",
+    "    #         description='useful for ending the conversation if the user cancels the task or you cannot complete the task.'\n",
+    "    #     ),\n",
+    "\n",
+    "    #     Tool(\n",
+    "    #         name='Do nothing',\n",
+    "    #         func=nothing,\n",
+    "    #         description='useful for filling in Action: after Thought: if the task can\\'t be done or the task is cancelled.'\n",
+    "    #     ),\n",
+    "    ]\n",
     "\n",
     "human = load_tools(['human'])\n",
     "tool1.extend(human)\n",
@@ -429,29 +429,25 @@
     "prefix1 = f\"\"\"You are an intelligent assistant helping user find his/her information in HRM system by using tool. \n",
     "HRM system is a system which store employees's data of a company, but you only able to answer questions about the current user.\n",
     "The user chatting with you is {get_userName(email)} and he/she own the email: {email}. \n",
-    "If the question is not about the current user:\n",
-    "- No search anything.\n",
-    "- Must not use data of the current user {email} to answer to the question about other users.\n",
+    "If the question is not about the current user: must not use data of the current user {email} to answer to the question about other users.\n",
+    "If the user greet you, friendly response.\n",
     "You have access to the following tools:\"\"\"\n",
     "\n",
     "temp1 = f'''\n",
     "\n",
     "Examples: \n",
     "Question: What is hung.bui@nois.vn's bank account number?\n",
-    "Thought: The user chatting with you own the email {email}.\n",
-    "Thought: The question is not about the current user, do not reponse anything.\n",
+    "Thought: The user chatting with you own the email {email}. The question is not about the current user, ask user to ask another question.\n",
     "Final Answer: Sorry, due to security policy, I can not answer your question.\n",
     "Finished chain.\n",
     "\n",
     "Question: I want to know Bao Ho's mobile phone number?\n",
-    "Thought: The user chatting with you own the email {email}.\n",
-    "Thought: The question is not about the current user, do not reponse anything.\n",
+    "Thought: The user chatting with you own the email {email}. The question is not about the current user, ask user to ask another question.\n",
     "Final Answer: Sorry, due to security policy, I can not answer your question.\n",
     "Finished chain.\n",
     "\n",
     "Question: What is my date of birth?\n",
-    "Thought: The user chatting with me has the email {email}.\n",
-    "Thought: find the data of user by user's email.\n",
+    "Thought: The user chatting with me has the email {email}. find the data of user by user's email.\n",
     "Action: HRM get user data\n",
     "Action Input: {email}\n",
     "Observation: 12/5/2000\n",
@@ -467,7 +463,7 @@
     "{context}\n",
     "\n",
     "Question: {input}\n",
-    "{agent_scratchpad} \n",
+    "{agent_scratchpad}     \n",
     "'''\n",
     "\n",
     "suffix1 = temp1 + suffix1\n",
@@ -493,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "c91d46a0",
    "metadata": {},
    "outputs": [
@@ -504,61 +500,9 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new  chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought: The user chatting with me has the email bao.ho@nois.vn.\n",
-      "Thought: Find the data of user by user's email.\n",
-      "Action: HRM get user data\n",
-      "Action Input: bao.ho@nois.vn\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3mUser info:\n",
-      "- id: 7cc99c43-1951-4bc1-a1c9-ca3487b1d6f3\n",
-      "- name: Bao Ho\n",
-      "- email: bao.ho@nois.vn\n",
-      "- fullName: HỒ NGUYỄN NGỌC BẢO\n",
-      "- jobTitle: Lập Trình Viên\n",
-      "- mobilePhone: \n",
-      "- birthday: 2002-04-30\n",
-      "- offDay: 3\n",
-      "- yearOffDay: 3\n",
-      "- maxDayOff: 12\n",
-      "- remainingOffDays: 9\n",
-      "- remainDayOffLastYear: 0\n",
-      "- offDayUseRamainDayOffLastYear: 0\n",
-      "- gender: 1\n",
-      "- personalEmail: honguyenngocbao@gmail.com\n",
-      "- avatar: \n",
-      "- acceptOfferDate: \n",
-      "- quitJobDate: \n",
-      "- bonusDayOff: 0\n",
-      "- managerId: 139\n",
-      "- managerFullName: LÝ MINH QUÂN\n",
-      "- departmentId: 0\n",
-      "- departmentName: \n",
-      "- groupUserId: \n",
-      "- groupUserName: \n",
-      "- hasLeft: \n",
-      "- identityCard: \n",
-      "- dateOfIssue: \n",
-      "- issuedBy: \n",
-      "- placeOfTemporaryResidence: \n",
-      "- placeOfResidence: \n",
-      "- relativeName: \n",
-      "- relationship: \n",
-      "- relativeMobilePhone: \n",
-      "- hasBankAccount: \n",
-      "- bankName: \n",
-      "- bankBranch: \n",
-      "- bankAccountNumber: \n",
-      "- birthPlace: \n",
-      "- isFirstLogin: \n",
-      "- roles: \n",
-      "- taxIdentificationNumber: \n",
-      "- education: \n",
-      "- jobId: \n",
-      "- jobName: \n",
-      "- levelId: \n",
-      "- levelName: \n",
-      "\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mThe answer is founded.\n",
-      "Final Answer: You have 9 off-days left.\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mThought: The user greeted me.\n",
+      "Action: N/A\n",
+      "Final Answer: Hello! How can I assist you today?\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -566,10 +510,10 @@
     {
      "data": {
       "text/plain": [
-       "'You have 9 off-days left.'"
+       "'Hello! How can I assist you today?'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,12 +521,12 @@
    "source": [
     "# print(prompt1.template)\n",
     "history1.clear()\n",
-    "agent_chain1.run(input=\"How many off-days do I have left?\")"
+    "agent_chain1.run(input=\"Hello from Saigon.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "78b1d4d4",
    "metadata": {},
    "outputs": [
@@ -706,8 +650,7 @@
     "\n",
     "Example:  \n",
     "Question: I'd like to submit leave application.\n",
-    "Thought: The user chatting with you own the email {email}.\n",
-    "Thought: Find the user's id by {email}.\n",
+    "Thought: The user chatting with you own the email {email}. Find the user's id by {email}.\n",
     "Action: HRM get userId\n",
     "Action Input: {email}\n",
     "Observation: {get_userId(email)}\n",
@@ -777,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "ae25de60",
    "metadata": {},
    "outputs": [],
@@ -787,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "8a6d3ab3",
    "metadata": {
     "scrolled": false
@@ -801,14 +744,10 @@
       "\n",
       "\u001b[1m> Entering new  chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3mThought: The user wants to submit a leave application.\n",
-      "Thought: Find the user's id by bao.ho@nois.vn.\n",
       "Action: HRM get userId\n",
       "Action Input: bao.ho@nois.vn\u001b[0m\n",
       "Observation: \u001b[36;1m\u001b[1;3m7cc99c43-1951-4bc1-a1c9-ca3487b1d6f3\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mAfter having user's id, ask the user for the manager's name.\u001b[0m\n",
-      "Observation: Invalid Format: Missing 'Action:' after 'Thought:'\n",
-      "Thought:\u001b[32;1m\u001b[1;3mQuestion: What is the name of your manager?\n",
-      "Thought: I need to ask the user for the name of their manager.\n",
+      "Thought:\u001b[32;1m\u001b[1;3mThe user's id is 7cc99c43-1951-4bc1-a1c9-ca3487b1d6f3.\n",
       "Action: human\n",
       "Action Input: What is the name of your manager?\u001b[0m\n",
       "\n",
@@ -822,7 +761,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m history\u001b[38;5;241m.\u001b[39mclear()\n\u001b[1;32m----> 2\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[43magent_chain2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mI\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43md like to submit a leave application.\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[14], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m history\u001b[38;5;241m.\u001b[39mclear()\n\u001b[1;32m----> 2\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[43magent_chain2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mI\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43md like to submit a leave application.\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\langchain\\chains\\base.py:445\u001b[0m, in \u001b[0;36mChain.run\u001b[1;34m(self, callbacks, tags, metadata, *args, **kwargs)\u001b[0m\n\u001b[0;32m    440\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m(args[\u001b[38;5;241m0\u001b[39m], callbacks\u001b[38;5;241m=\u001b[39mcallbacks, tags\u001b[38;5;241m=\u001b[39mtags, metadata\u001b[38;5;241m=\u001b[39mmetadata)[\n\u001b[0;32m    441\u001b[0m         _output_key\n\u001b[0;32m    442\u001b[0m     ]\n\u001b[0;32m    444\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m kwargs \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m args:\n\u001b[1;32m--> 445\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcallbacks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcallbacks\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtags\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtags\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetadata\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmetadata\u001b[49m\u001b[43m)\u001b[49m[\n\u001b[0;32m    446\u001b[0m         _output_key\n\u001b[0;32m    447\u001b[0m     ]\n\u001b[0;32m    449\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kwargs \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m args:\n\u001b[0;32m    450\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    451\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`run` supported with either positional arguments or keyword arguments,\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    452\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m but none were provided.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    453\u001b[0m     )\n",
       "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\langchain\\chains\\base.py:243\u001b[0m, in \u001b[0;36mChain.__call__\u001b[1;34m(self, inputs, return_only_outputs, callbacks, tags, metadata, include_run_info)\u001b[0m\n\u001b[0;32m    241\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m, \u001b[38;5;167;01mException\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    242\u001b[0m     run_manager\u001b[38;5;241m.\u001b[39mon_chain_error(e)\n\u001b[1;32m--> 243\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n\u001b[0;32m    244\u001b[0m run_manager\u001b[38;5;241m.\u001b[39mon_chain_end(outputs)\n\u001b[0;32m    245\u001b[0m final_outputs: Dict[\u001b[38;5;28mstr\u001b[39m, Any] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprep_outputs(\n\u001b[0;32m    246\u001b[0m     inputs, outputs, return_only_outputs\n\u001b[0;32m    247\u001b[0m )\n",
       "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\langchain\\chains\\base.py:237\u001b[0m, in \u001b[0;36mChain.__call__\u001b[1;34m(self, inputs, return_only_outputs, callbacks, tags, metadata, include_run_info)\u001b[0m\n\u001b[0;32m    231\u001b[0m run_manager \u001b[38;5;241m=\u001b[39m callback_manager\u001b[38;5;241m.\u001b[39mon_chain_start(\n\u001b[0;32m    232\u001b[0m     dumpd(\u001b[38;5;28mself\u001b[39m),\n\u001b[0;32m    233\u001b[0m     inputs,\n\u001b[0;32m    234\u001b[0m )\n\u001b[0;32m    235\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    236\u001b[0m     outputs \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m--> 237\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrun_manager\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrun_manager\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    238\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m new_arg_supported\n\u001b[0;32m    239\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call(inputs)\n\u001b[0;32m    240\u001b[0m     )\n\u001b[0;32m    241\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m, \u001b[38;5;167;01mException\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    242\u001b[0m     run_manager\u001b[38;5;241m.\u001b[39mon_chain_error(e)\n",
